Tweak align content, add shadows to home cards

--- a/src/pages/docs/align-content.mdx
+++ b/src/pages/docs/align-content.mdx
@@ -15,7 +15,7 @@ Use `content-start` to pack rows in a container against the start of the cross a
 
 ```html rose
 <template preview class="p-4">
-  <div class="flex content-start flex-wrap h-48">
+  <div class="flex content-start flex-wrap h-48 bg-stripes bg-stripes-rose-500 rounded-lg">
     <div class="w-1/3 p-2">
       <div class="h-12 text-white text-2xl font-extrabold rounded-md flex items-center justify-center bg-rose-500">1</div>
     </div>
@@ -34,7 +34,7 @@ Use `content-start` to pack rows in a container against the start of the cross a
   </div>
 </template>
 
-<div class="flex **content-start** ...">
+<div class="h-48 flex **content-start** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
@@ -49,7 +49,7 @@ Use `content-center` to pack rows in a container in the center of the cross axis
 
 ```html indigo
 <template preview class="p-4">
-  <div class="flex content-center flex-wrap h-48">
+  <div class="flex content-center flex-wrap h-48 bg-stripes bg-stripes-indigo-500 rounded-lg">
     <div class="w-1/3 p-2">
       <div class="h-12 text-white text-2xl font-extrabold rounded-md flex items-center justify-center bg-indigo-500">1</div>
     </div>
@@ -68,7 +68,7 @@ Use `content-center` to pack rows in a container in the center of the cross axis
   </div>
 </template>
 
-<div class="flex **content-center** ...">
+<div class="h-48 flex **content-center** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
@@ -83,7 +83,7 @@ Use `content-end` to pack rows in a container against the end of the cross axis:
 
 ```html emerald
 <template preview class="p-4">
-  <div class="flex content-end flex-wrap h-48">
+  <div class="flex content-end flex-wrap h-48 bg-stripes bg-stripes-emerald-500 rounded-lg">
     <div class="w-1/3 p-2">
       <div class="h-12 text-white text-2xl font-extrabold rounded-md flex items-center justify-center bg-emerald-500">1</div>
     </div>
@@ -102,7 +102,7 @@ Use `content-end` to pack rows in a container against the end of the cross axis:
   </div>
 </template>
 
-<div class="flex **content-end** ...">
+<div class="h-48 flex **content-end** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
@@ -117,7 +117,7 @@ Use `content-between` to distribute rows in a container such that there is an eq
 
 ```html amber
 <template preview class="p-4">
-  <div class="flex content-between flex-wrap h-48">
+  <div class="flex content-between flex-wrap h-48 rounded-lg bg-stripes bg-stripes-amber-500">
     <div class="w-1/3 p-2">
       <div class="h-12 text-white text-2xl font-extrabold rounded-md flex items-center justify-center bg-amber-500">1</div>
     </div>
@@ -136,7 +136,7 @@ Use `content-between` to distribute rows in a container such that there is an eq
   </div>
 </template>
 
-<div class="flex **content-between** ...">
+<div class="h-48 flex **content-between** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
@@ -151,7 +151,7 @@ Use `content-around` to distribute rows in a container such that there is an equ
 
 ```html lightBlue
 <template preview class="p-4">
-  <div class="flex content-around flex-wrap h-48">
+  <div class="flex content-around flex-wrap h-48 bg-stripes bg-stripes-light-blue-500 rounded-lg">
     <div class="w-1/3 p-2">
       <div class="h-12 text-white text-2xl font-extrabold rounded-md flex items-center justify-center bg-light-blue-500">1</div>
     </div>
@@ -170,7 +170,7 @@ Use `content-around` to distribute rows in a container such that there is an equ
   </div>
 </template>
 
-<div class="flex **content-around** ...">
+<div class="h-48 flex **content-around** ...">
   <div>1</div>
   <div>2</div>
   <div>3</div>
