Update the border opacity examples

--- a/src/pages/docs/border-opacity.mdx
+++ b/src/pages/docs/border-opacity.mdx
@@ -13,22 +13,22 @@ export const classes = { plugin }
 
 Control the opacity of an element's border color using the `border-opacity-{amount}` utilities.
 
-```html
-<template preview class="bg-checkered p-4">
-  <div class="flex justify-around">
-    <div class="h-16 w-16 rounded border-4 border-blue-500 border-opacity-100"></div>
-    <div class="h-16 w-16 rounded border-4 border-blue-500 border-opacity-75"></div>
-    <div class="h-16 w-16 rounded border-4 border-blue-500 border-opacity-50"></div>
-    <div class="h-16 w-16 rounded border-4 border-blue-500 border-opacity-25"></div>
-    <div class="h-16 w-16 rounded border-4 border-blue-500 border-opacity-0"></div>
+```html lightBlue
+<template preview>
+  <div class="grid grid-cols-2 gap-2 sm:grid-cols-5">
+    <div class="h-16 flex-1 rounded border-4 border-light-blue-500 border-opacity-100 font-extrabold text-light-blue-600 flex justify-center items-center">100%</div>
+    <div class="h-16 flex-1 rounded border-4 border-light-blue-500 border-opacity-75 font-extrabold text-light-blue-600 flex justify-center items-center">75%</div>
+    <div class="h-16 flex-1 rounded border-4 border-light-blue-500 border-opacity-50 font-extrabold text-light-blue-600 flex justify-center items-center">50%</div>
+    <div class="h-16 flex-1 rounded border-4 border-light-blue-500 border-opacity-25 font-extrabold text-light-blue-600 flex justify-center items-center">25%</div>
+    <div class="h-16 flex-1 rounded border-4 border-light-blue-500 border-opacity-0 font-extrabold text-light-blue-600 flex justify-center items-center">0%</div>
   </div>
 </template>
 
-<div class="border-blue-500 border-opacity-100"></div>
-<div class="border-blue-500 border-opacity-75"></div>
-<div class="border-blue-500 border-opacity-50"></div>
-<div class="border-blue-500 border-opacity-25"></div>
-<div class="border-blue-500 border-opacity-0"></div>
+<div class="border-4 border-light-blue-500 **border-opacity-100** ..."></div>
+<div class="border-4 border-light-blue-500 **border-opacity-75** ..."></div>
+<div class="border-4 border-light-blue-500 **border-opacity-50** ..."></div>
+<div class="border-4 border-light-blue-500 **border-opacity-25** ..."></div>
+<div class="border-4 border-light-blue-500 **border-opacity-0** ..."></div>
 ```
 
 ## Responsive
