--- a/src/pages/docs/hover-focus-and-other-states.mdx
+++ b/src/pages/docs/hover-focus-and-other-states.mdx
@@ -13,7 +13,7 @@ import { VariantEnabledList } from '@/components/VariantEnabledList'
 Similar to how Tailwind handles [responsive design](/docs/responsive-design), styling elements on hover, focus, and more can be accomplished by prefixing utilities with the appropriate state variant.
 
 ```html purple
-<template preview>
+<template preview class="p-6">
   <form class="flex w-full max-w-sm mx-auto space-x-3">
     <input class="flex-1 appearance-none border border-transparent w-full py-2 px-4 bg-white text-gray-700 placeholder-gray-400 shadow-md rounded-lg text-base hover:border-purple-600 focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent" type="email" placeholder="Your email">
     <button class="flex-shrink-0 bg-purple-600 text-white text-base font-semibold py-2 px-4 rounded-lg shadow-md hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-purple-600 focus:ring-opacity-50" type="button">
@@ -278,30 +278,24 @@ module.exports = {
 
 Add the `focus-visible:` prefix to only apply a utility when an element has focus but only if the user is using the keyboard.
 
-```html
-<template preview class="p-8">
-  <ul class="flex space-x-8">
-    <li>
-      <a class="text-blue-500 hover:text-blue-800 focus:outline-none focus:underline" href="#" onclick="((e) => {e.stopPropagation(); e.preventDefault()})(event)">Underlined on focus</a>
-    </li>
-    <li>
-      <a class="text-blue-500 hover:text-blue-800 focus:outline-none focus-visible:underline" href="#" onclick="((e) => {e.stopPropagation(); e.preventDefault()})(event)">Underlined on focus-visible</a>
-    </li>
-  </ul>
+```html rose
+<template preview>
+  <div class="flex justify-center space-x-8">
+    <button type="button" class="py-2 px-4 bg-rose-500 text-white font-semibold rounded-lg shadow-md hover:bg-rose-700 focus:outline-none focus:bg-rose-500 focus:ring-2 focus:ring-rose-500 focus:ring-offset-2 focus:ring-opacity-75 focus:ring-transparent">
+      Ring on focus
+    </button>
+    <button type="button" class="py-2 px-4 bg-rose-500 text-white font-semibold rounded-lg shadow-md hover:bg-rose-700 focus:outline-none focus:bg-rose-500 focus-visible:ring-2 focus-visible:ring-rose-500 focus-visible:ring-offset-2 focus-visible:ring-opacity-75 focus-visible:ring-transparent">
+      Ring on focus-visible
+    </button>
+  </div>
 </template>
 
-<ul class="flex space-x-8">
-  <li>
-    <a class="focus:outline-none focus:underline ..." href="#">
-      Underlined on focus
-    </a>
-  </li>
-  <li>
-    <a class="focus:outline-none focus-visible:underline ..." href="#">
-      Underlined on focus-visible
-    </a>
-  </li>
-</ul>
+<button class="**focus:ring-2 focus:ring-rose-500** ...">
+  Ring on focus
+</button>
+<button class="**focus-visible:ring-2 focus-visible:ring-rose-500** ...">
+  Ring on focus-visible
+</button>
 ```
 
 Note that currently only [Chrome, Edge, and Firefox](https://caniuse.com/?search=focus-visible) support `focus-visible` natively, so for sufficient browser support you should install and configure both the [focus-visible JS polyfill](https://github.com/WICG/focus-visible) and the [focus-visible PostCSS polyfill](https://github.com/csstools/postcss-focus-visible). Make sure to include the PostCSS plugin _after_ Tailwind in your list of PostCSS plugins:
@@ -343,22 +337,24 @@ Add the `motion-safe:` prefix to only apply a utility when the `prefers-reduced-
 
 For example, this button will only animate on hover if the user hasn't enabled "Reduce motion" on their system.
 
-```html
-<template preview class="p-6 text-center">
-  <button type="button" class="bg-blue-500 active:bg-blue-700 text-white font-semibold hover:text-white py-2 px-4 rounded focus:outline-none focus:shadow-outline transition transform ease-in-out duration-300 motion-safe:hover:-translate-y-1 motion-safe:hover:scale-110">
-    Hover
-  </button>
+```html lightBlue
+<template preview>
+  <div class="text-center">
+    <button type="button" class="py-2 px-4 bg-light-blue-500 text-white font-semibold rounded-lg shadow-md transform transition motion-safe:hover:scale-110 duration-500 focus:outline-none" tabindex="-1">
+      Hover me
+    </button>
+  </div>
 </template>
 
-<button class="transform motion-safe:hover:-translate-y-1 motion-safe:hover:scale-110 transition ease-in-out duration-300 ...">
-  Hover
+<button class="transform **motion-safe:hover:scale-110** ...">
+  Hover me
 </button>
 ```
 
 Note that unlike most other variants, `motion-safe` can be combined with both responsive variants _and_ other variants like `hover`, by stacking them in this order:
 
 ```html
-<div class="sm:motion-safe:hover:animate-spin">
+<div class="**sm:motion-safe:hover:animate-spin**">
   <!-- ... -->
 </div>
 ```
@@ -389,22 +385,24 @@ Add the `motion-reduce:` prefix to only apply a utility when the `prefers-reduce
 
 For example, this button will animate on hover by default, but the animations will be disabled if the user has enabled "Reduce motion" on their system.
 
-```html
-<template preview class="p-6 text-center">
-  <button type="button" class="bg-blue-500 active:bg-blue-700 text-white font-semibold hover:text-white py-2 px-4 rounded focus:outline-none focus:shadow-outline transition transform ease-in-out duration-300 hover:-translate-y-1 hover:scale-110 motion-reduce:hover:transform-none">
-    Hover
-  </button>
+```html fuchsia
+<template preview>
+  <div class="text-center">
+    <button type="button" class="py-2 px-4 bg-fuchsia-500 text-white font-semibold rounded-lg shadow-md transform transition motion-reduce:transform-none hover:scale-110 duration-500 focus:outline-none" tabindex="-1">
+      Hover me
+    </button>
+  </div>
 </template>
 
-<button class="transform motion-reduce:transform-none hover:-translate-y-1 hover:scale-110 transition ease-in-out duration-300 ...">
-  Hover
+<button class="transform hover:scale-110 **motion-reduce:transform-none** ...">
+  Hover me
 </button>
 ```
 
 Note that unlike most other variants, `motion-reduce` can be combined with both responsive variants _and_ other variants like `hover`, by stacking them in this order:
 
 ```html
-<div class="sm:motion-reduce:hover:animate-none">
+<div class="**sm:motion-reduce:hover:animate-none**">
   <!-- ... -->
 </div>
 ```
@@ -433,21 +431,22 @@ module.exports = {
 
 Add the `disabled:` prefix to only apply a utility when an element is disabled.
 
-```html
-<template preview class="text-center p-4">
-  <button type="button" class="ml-4 disabled:opacity-75 bg-blue-500 active:bg-blue-700 text-white font-semibold hover:text-white py-2 px-4 rounded focus:outline-none focus:shadow-outline">
-    Submit
-  </button>
-  <button disabled type="button" class="ml-4 disabled:opacity-75 bg-blue-500 active:bg-blue-700 text-white font-semibold hover:text-white py-2 px-4 rounded focus:outline-none focus:shadow-outline">
-    Submit
-  </button>
+```html emerald
+<template preview>
+  <div class="text-center space-x-8">
+    <button type="button" class="py-2 px-4 bg-emerald-500 text-white font-semibold rounded-lg shadow-md hover:bg-emerald-700 focus:outline-none disabled:opacity-50" tabindex="-1">
+      Submit
+    </button>
+    <button type="button" class="py-2 px-4 bg-emerald-500 text-white font-semibold rounded-lg shadow-md disabled:opacity-50" disabled tabindex="-1">
+      Submit
+    </button>
+  </div>
 </template>
 
-<button class="disabled:opacity-75 bg-blue-500...">
+<button class="**disabled:opacity-50** ...">
   Submit
 </button>
-
-<button disabled class="disabled:opacity-75 bg-blue-500...">
+<button disabled class="**disabled:opacity-50** ..." disabled>
   Submit
 </button>
 ```
@@ -476,13 +475,15 @@ module.exports = {
 
 Add the `visited:` prefix to only apply a utility when a link has been visited.
 
-```html
-<template preview class="text-center p-4">
-  <a href="#" class="underline font-semibold text-blue-600">Unvisited link</a>
-  <a href="#" class="ml-4 underline font-semibold text-purple-600">Visited link</a>
+```html indigo
+<template preview>
+  <div class="text-center space-x-16">
+    <a href="#" class="font-semibold text-blue-600 ">Unvisited link</a>
+    <a href="#" class="font-semibold text-purple-600 ">Visited link</a>
+  </div>
 </template>
 
-<a href="#" class="text-blue-600 visited:text-purple-600 ...">Link</a>
+<a href="#" class="text-blue-600 **visited:text-purple-600** ...">Link</a>
 ```
 
 <div>
@@ -509,25 +510,17 @@ module.exports = {
 
 Add the `checked:` prefix to only apply a utility when a radio or checkbox is currently checked.
 
-```html
-<template preview class="flex items-center justify-center p-8">
-  <div class="space-y-2">
-    <label class="flex items-center space-x-4">
-      <input type="radio" name="checked-demo" value="1" class="appearance-none h-3 w-3 border border-gray-400 rounded-full checked:bg-gray-900 checked:border-transparent focus:outline-none">
-      <span>Option 1</span>
-    </label>
-    <label class="flex items-center space-x-4">
-      <input type="radio" name="checked-demo" value="2" class="appearance-none h-3 w-3 border border-gray-400 rounded-full checked:bg-gray-900 checked:border-transparent focus:outline-none">
-      <span>Option 2</span>
-    </label>
-    <label class="flex items-center space-x-4">
-      <input type="radio" name="checked-demo" value="3" class="appearance-none h-3 w-3 border border-gray-400 rounded-full checked:bg-gray-900 checked:border-transparent focus:outline-none">
-      <span>Option 3</span>
+```html lightBlue
+<template preview>
+  <div class="p-4 max-w-xs mx-auto bg-white rounded-xl shadow-md">
+    <label class="flex items-center space-x-3">
+      <input type="checkbox" name="checked-demo" value="1" class="form-tick appearance-none h-6 w-6 border border-gray-300 rounded-md checked:bg-light-blue-600 checked:border-transparent focus:outline-none">
+      <span class="text-gray-900 font-medium">Option 1</span>
     </label>
   </div>
 </template>
 
-<input type="radio" class="appearance-none checked:bg-gray-900 checked:border-transparent ...">
+<input type="checkbox" class="appearance-none **checked:bg-blue-light-600 checked:border-transparent** ...">
 ```
 
 <div>
@@ -554,17 +547,17 @@ module.exports = {
 
 Add the `first:` prefix to only apply a utility when it is the first-child of its parent. This is mostly useful when elements are being generated in some kind of loop.
 
-```html
-<template preview class="text-center p-4">
-  <div class="text-left max-w-sm border rounded">
-    <div class="px-4 py-2 border-t first:border-t-0">One</div>
-    <div class="px-4 py-2 border-t first:border-t-0">Two</div>
-    <div class="px-4 py-2 border-t first:border-t-0">Three</div>
+```html indigo
+<template preview class="p-6">
+  <div class="bg-white rounded-xl shadow-md overflow-hidden">
+    <div class="px-6 py-4 border-t first:border-t-0">One</div>
+    <div class="px-6 py-4 border-t first:border-t-0">Two</div>
+    <div class="px-6 py-4 border-t first:border-t-0">Three</div>
   </div>
 </template>
 
-<div class="border rounded">
-  <div v-for="item in items" class="border-t first:border-t-0">
+<div class="rounded-xl ...">
+  <div v-for="item in items" class="border-t **first:border-t-0** ...">
     {{ item }}
   </div>
 </div>
@@ -596,17 +589,17 @@ module.exports = {
 
 Add the `last:` prefix to only apply a utility when it is the last-child of its parent. This is mostly useful when elements are being generated in some kind of loop.
 
-```html
-<template preview class="text-center p-4">
-  <div class="text-left max-w-sm border rounded">
-    <div class="px-4 py-2 border-b last:border-b-0">One</div>
-    <div class="px-4 py-2 border-b last:border-b-0">Two</div>
-    <div class="px-4 py-2 border-b last:border-b-0">Three</div>
+```html purple
+<template preview class="p-6">
+  <div class="bg-white rounded-xl shadow-md overflow-hidden">
+    <div class="px-6 py-4 border-b last:border-b-0">One</div>
+    <div class="px-6 py-4 border-b last:border-b-0">Two</div>
+    <div class="px-6 py-4 border-b last:border-b-0">Three</div>
   </div>
 </template>
 
-<div class="border rounded">
-  <div v-for="item in items" class="border-b last:border-b-0">
+<div class="rounded-xl ...">
+  <div v-for="item in items" class="border-t **last:border-b-0** ...">
     {{ item }}
   </div>
 </div>
@@ -638,17 +631,17 @@ module.exports = {
 
 Add the `odd:` prefix to only apply a utility when it is an odd-child of its parent. This is mostly useful when elements are being generated in some kind of loop.
 
-```html
-<template preview class="text-center p-4">
-  <div class="rounded overflow-hidden text-left max-w-sm border">
-    <div class="px-4 py-2 bg-white odd:bg-gray-200">One</div>
-    <div class="px-4 py-2 bg-white odd:bg-gray-200">Two</div>
-    <div class="px-4 py-2 bg-white odd:bg-gray-200">Three</div>
+```html rose
+<template preview class="p-6">
+  <div class="bg-white rounded-xl shadow-md overflow-hidden divide-y divide-gray-200">
+    <div class="px-6 py-4 odd:bg-gray-100">One</div>
+    <div class="px-6 py-4 odd:bg-gray-100">Two</div>
+    <div class="px-6 py-4 odd:bg-gray-100">Three</div>
   </div>
 </template>
 
-<div class="border rounded">
-  <div v-for="item in items" class="bg-white odd:bg-gray-200">
+<div class="rounded-xl ...">
+  <div v-for="item in items" class="**odd:bg-gray-100** ...">
     {{ item }}
   </div>
 </div>
@@ -680,17 +673,17 @@ module.exports = {
 
 Add the `even:` prefix to only apply a utility when it is an even-child of its parent. This is mostly useful when elements are being generated in some kind of loop.
 
-```html
-<template preview class="text-center p-4">
-  <div class="rounded overflow-hidden text-left max-w-sm border">
-    <div class="px-4 py-2 bg-white even:bg-gray-200">One</div>
-    <div class="px-4 py-2 bg-white even:bg-gray-200">Two</div>
-    <div class="px-4 py-2 bg-white even:bg-gray-200">Three</div>
+```html fuchsia
+<template preview class="p-6">
+  <div class="bg-white rounded-xl shadow-md overflow-hidden divide-y divide-gray-200">
+    <div class="px-6 py-4 even:bg-gray-100">One</div>
+    <div class="px-6 py-4 even:bg-gray-100">Two</div>
+    <div class="px-6 py-4 even:bg-gray-100">Three</div>
   </div>
 </template>
 
-<div class="border rounded">
-  <div v-for="item in items" class="bg-white even:bg-gray-200">
+<div class="rounded-xl ...">
+  <div v-for="item in items" class="**even:bg-gray-100** ...">
     {{ item }}
   </div>
 </div>
