Update upgrade guide, tweak some examples, rough in integration guides grid

--- a/src/pages/docs/align-items.mdx
+++ b/src/pages/docs/align-items.mdx
@@ -96,9 +96,9 @@ Use `items-baseline` to align items along the container's cross axis such that a
 ```html emerald
 <template preview class="p-4">
   <div class="flex items-baseline h-32 -m-2">
-    <div class="flex-1 rounded-md bg-emerald-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">1</div>
-    <div class="flex-1 rounded-md bg-emerald-500 text-white text-6xl font-extrabold flex items-center justify-center m-2">2</div>
-    <div class="flex-1 rounded-md bg-emerald-500 text-white text-4xl font-extrabold flex items-center justify-center m-2">3</div>
+    <div class="flex-1 pt-4 pb-6 rounded-md bg-emerald-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">1</div>
+    <div class="flex-1 pt-6 pb-10 rounded-md bg-emerald-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">2</div>
+    <div class="flex-1 pt-8 pb-4 rounded-md bg-emerald-500 text-white text-2xl font-extrabold flex items-center justify-center m-2">3</div>
   </div>
 </template>
 
