--- a/src/pages/docs/installation.mdx
+++ b/src/pages/docs/installation.mdx
@@ -5,21 +5,15 @@ description: Learn how get Tailwind CSS up and running in your project.
 
 import { Heading } from '@/components/Heading'
 import { List, ListItemBad } from '@/components/List'
+import { IntegrationGuides } from '@/components/IntegrationGuides'
 import Link from 'next/link'
 import stats from '@/utils/stats'
 
-## Integration guides
+## Choose your framework
 
 We've put together a bunch of guides to help you get Tailwind up and running with your favorite tools as fast as possible.
 
-- [Angular](/docs/guides/angular)
-- [Create React App](/docs/guides/create-react-app)
-- [Gatsby](/docs/guides/gatsby)
-- [Laravel](/docs/guides/laravel)
-- [Next.js](/docs/guides/nextjs)
-- [Nuxt.js](/docs/guides/nuxtjs)
-- [Rails](/docs/guides/rails)
-- [Vue 3](/docs/guides/vue-3-vite)
+<IntegrationGuides />
 
 If we're missing a guide for your framework of choice have no fear, our [general installation instructions](#installing-tailwind-as-a-post-css-plugin) will get you set up in no time.
 
